# Phrasis

./: CMakeLists.txt  LICENSE.GPL  phrasis.pro
cmake/modules/: FindEnchant.cmake  FindLinkGrammar.cmake
docs/: HELP.en  HELP.fr
resources/: all.map  resources.qrc
src/: dialogimpl.cpp  dialogimpl.h  fadebutton.cpp  fadebutton.h  grammarcheck.cpp  grammarcheck.h  linkgrammar.cpp  linkgrammar.h  main.cpp  mouseawareframe.cpp  mouseawareframe.h  previewform.cpp  previewform.h  scrollbar.cpp  scrollbar.h  spellcheck.cpp  spellcheck.h
trunk/: phrasis.pro
trunk/src/: dialogimpl.h  main.cpp  scrollbar.h
ui/: dialog.ui
